@@ -40,6 +40,7 @@ def example_01(dsname, source, ofname, events, evskip, plotim, verbos):
     t0_sec = time()
     counter=0
     arr_sum = np.zeros(shape, dtype=np.double)
+    arr_max = np.zeros(shape, dtype=np.double)
 
     for i, evt in enumerate(ds.events()) :
 
@@ -51,6 +52,7 @@ def example_01(dsname, source, ofname, events, evskip, plotim, verbos):
         if verbos and not i%10 : print '  Event: %d' % i
         counter += 1
         arr_sum += cdata 
+        arr_max = np.maximum(arr_max, cdata)
 
     print '  Detector data found in %d events' % counter
     print '  Total consumed time = %f sec' % (time()-t0_sec)
@@ -61,20 +63,29 @@ def example_01(dsname, source, ofname, events, evskip, plotim, verbos):
     # Plot averaged image
 
     if plotim :
-        img = det.image(evt, arr_ave)
+        #nda = arr_ave
+        nda = arr_max
+        img = det.image(evt, nda)
         if img is None : sys.exit('Image is not available. FURTHER TEST IS TERMINATED')
     
-        ave, rms = arr_ave.mean(), arr_ave.std()
+        ave, rms = nda.mean(), nda.std()
         gg.plotImageLarge(img, amp_range=(ave-1*rms, ave+3*rms))
         gg.show()
 
     ##-----------------------------
     # Save n-d array in text file
+
+    suffix = source.replace(":","-").replace(".","-") #.lower()
     
     arr_ave = reshape_nda_to_2d(arr_ave)
-    fname = '%s-%s-r%04d-e%06d.txt' % (ofname, env.experiment(), evt.run(), counter)    
-    print 'Save array in file %s' % fname
+    fname = '%s-%s-r%04d-e%06d-%s-ave.txt' % (ofname, env.experiment(), evt.run(), counter, suffix)    
+    print 'Save averaged array in file %s' % fname
     np.savetxt(fname, arr_ave, fmt='%8.1f', delimiter=' ', newline='\n')
+
+    arr_max = reshape_nda_to_2d(arr_max)
+    ofname_max = '%s-%s-r%04d-e%06d-%s-max.txt' % (ofname, env.experiment(), evt.run(), counter, suffix)    
+    print 'Save maximum  array in file %s' % ofname_max
+    np.savetxt(ofname_max, arr_ave, fmt='%8.1f', delimiter=' ', newline='\n')
 
 #------------------------------
 
@@ -82,7 +93,7 @@ def usage() :
     return '\n\nExample of command to average n-d array from detector source and save it in file:\n'+\
            '\n         %prog -d <dataset> [-s <source>] [-f <file-prefix>]'+\
            ' [-n <events-collect>] [-m <events-skip>] [-p] [-v]'+\
-           '\n  ex1:   %prog -d exp=cxif5315:run=169 -s CxiDs2.0:Cspad.0 -f nda-ave -n 100 -m 0 -p -v'
+           '\n  ex1:   %prog -d exp=cxif5315:run=169 -s CxiDs2.0:Cspad.0 -f nda-cspad -n 100 -m 0 -p -v'
 
 ##-----------------------------
 
@@ -90,7 +101,7 @@ def input_options_parser() :
 
     dsname_def = 'exp=cxif5315:run=169'
     source_def = 'CxiDs2.0:Cspad.0'
-    ofname_def = 'nda-ave'
+    ofname_def = 'nda'
     events_def = 100
     evskip_def = 0
     verbos_def = True       
